Export translate errors symbols from ios/web_view.

The client needs these errors to respond properly during runtime.
Also converted to enum declaration to simplify it a little.

Bug: 874320
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Idd4af4b966cb856644eaf927fe41c419a8e7eba2
Reviewed-on: https://chromium-review.googlesource.com/1176649
Reviewed-by: Hiroshi Ichikawa <ichikawa@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: John Wu <jzw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583761}
Former-commit-id: 8cdb7d659c0d6b08352ee471f2c441de8122c9b6